// Copyright 2024 Chainguard, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package apko.v1;

option go_package = "github.com/dlorenc/melange2/pkg/service/apko";

// ApkoService provides apko layer generation as a gRPC service.
// This enables fault isolation, retries, and independent scaling of apko workers.
service ApkoService {
  // BuildLayers builds apko layers from an image configuration and returns
  // a reference to the image in a registry.
  rpc BuildLayers(BuildLayersRequest) returns (BuildLayersResponse);

  // Health returns the health status of the service.
  rpc Health(HealthRequest) returns (HealthResponse);
}

// BuildLayersRequest contains the parameters for building apko layers.
message BuildLayersRequest {
  // image_config_yaml is the serialized apko ImageConfiguration as YAML.
  string image_config_yaml = 1;

  // arch is the target architecture (e.g., "x86_64", "aarch64").
  string arch = 2;

  // extra_repos are additional APK repositories to use.
  repeated string extra_repos = 3;

  // extra_keys are additional APK signing keys to trust.
  repeated string extra_keys = 4;

  // extra_packages are additional packages to install.
  repeated string extra_packages = 5;

  // max_layers is the maximum number of layers to create (default: 50).
  int32 max_layers = 6;

  // request_id is an optional identifier for tracing.
  string request_id = 7;

  // ignore_signatures disables signature verification for APK packages.
  bool ignore_signatures = 8;
}

// BuildLayersResponse contains the result of building apko layers.
message BuildLayersResponse {
  // image_ref is the registry reference for the built image.
  // Example: "registry:5000/apko-cache:a3f9c5d2e1b4f7a6"
  string image_ref = 1;

  // layer_count is the number of layers in the image.
  int32 layer_count = 2;

  // cache_hit indicates whether the image was served from cache.
  bool cache_hit = 3;

  // locked_config_yaml is the resolved configuration with pinned package versions.
  string locked_config_yaml = 4;

  // duration_ms is the time taken to build the layers in milliseconds.
  int64 duration_ms = 5;
}

// HealthRequest is an empty request for health checks.
message HealthRequest {}

// HealthResponse contains the health status of the service.
message HealthResponse {
  // Status represents the health status.
  enum Status {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }

  // status is the current health status.
  Status status = 1;

  // active_requests is the number of currently active build requests.
  int32 active_requests = 2;

  // max_concurrent is the maximum number of concurrent requests allowed.
  int32 max_concurrent = 3;
}
